--- a/app/src/main/res/layout/activity_file_sharing.xml
+++ b/app/src/main/res/layout/activity_file_sharing.xml
@@ -4,14 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".FileSharingActivity">
+
+    <include android:id="@+id/toolbar"
+        layout="@layout/toolbar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="-53dp"
-        tools:layout_editor_absoluteY="0dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,36 +28,36 @@
 
             <Button
                 android:id="@+id/sendbtn"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10sp"
-                android:text="Image"
-                style="@style/Widget.AppCompat.Button.Colored"/>
+                android:text="Image" />
 
             <Button
                 android:id="@+id/video_button"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10sp"
-                android:text="Video"
-                style="@style/Widget.AppCompat.Button.Colored"/>
+                android:text="Video" />
 
             <Button
                 android:id="@+id/audio_button"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10sp"
-                android:text="Audio"
-                style="@style/Widget.AppCompat.Button.Colored"/>
+                android:text="Audio" />
 
             <Button
                 android:id="@+id/other_button"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10sp"
                 android:layout_marginEnd="10sp"
-                android:text="Other"
-                style="@style/Widget.AppCompat.Button.Colored"/>
+                android:text="Other" />
 
         </LinearLayout>
 
