--- a/app/src/main/res/layout/activity_messaging.xml
+++ b/app/src/main/res/layout/activity_messaging.xml
@@ -6,14 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".MessagingActivity">
 
+    <include android:id="@+id/toolbar"
+        layout="@layout/toolbar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:orientation="vertical"
         android:weightSum="100"
-        tools:layout_editor_absoluteX="205dp"
-        tools:layout_editor_absoluteY="16dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <CheckBox
             android:id="@+id/passwordcheckBox"
@@ -41,6 +45,7 @@
 
             <Button
                 android:id="@+id/passwordbtnbox"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -73,10 +78,10 @@
 
             <Button
                 android:id="@+id/sendbuttonnbox"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Send"
-                style="@style/Widget.AppCompat.Button.Colored"/>
+                android:text="Send" />
         </LinearLayout>
 
     </LinearLayout>
